chore: remove deprecated `type`
